<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    tools:context="com.example.android.footballcounter.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/realfootball3"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        >


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/advent_pro_medium"
                android:gravity="center_horizontal"
                android:text="@string/team1"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/scoreOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/advent_pro_medium"
                android:gravity="center_horizontal"
                android:text="@string/initial_score"
                android:textSize="40sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp">

                    <TextView
                        android:id="@+id/foulsOne_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/advent_pro_medium"
                        android:text="@string/fouls"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/foulsOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/foulsOne_textview"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/advent_pro_medium"
                        android:text="@string/initial_score"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp">

                    <TextView
                        android:id="@+id/cornersOne_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/advent_pro_medium"
                        android:text="@string/corners"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/cornersOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cornersOne_textview"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/advent_pro_medium"
                        android:text="@string/initial_score"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp">

                    <TextView
                        android:id="@+id/offsidesOne_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/advent_pro_medium"
                        android:text="@string/offsides"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/offsidesOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/offsidesOne_textview"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/advent_pro_medium"
                        android:text="@string/initial_score"
                        android:textSize="15sp" />

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="plusGoalOne"
                android:text="@string/goal_button"
                android:textSize="18sp"

                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="plusFoulsOne"
                android:text="@string/foul_button"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="plusCornersOne"
                android:text="@string/corner_button"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="plusOffsidesOne"
                android:text="@string/offside_button"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/advent_pro_medium"
                android:gravity="center_horizontal"
                android:text="@string/team2"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/scoreTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/advent_pro_medium"
                android:gravity="center_horizontal"
                android:text="@string/initial_score"
                android:textSize="40sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp">

                    <TextView
                        android:id="@+id/foulsTwo_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/advent_pro_medium"
                        android:text="@string/fouls"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/foulsTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/foulsTwo_textview"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/advent_pro_medium"
                        android:text="@string/initial_score"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp">

                    <TextView
                        android:id="@+id/cornersTwo_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/advent_pro_medium"
                        android:text="@string/corners"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/cornersTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cornersTwo_textview"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/advent_pro_medium"
                        android:text="@string/initial_score"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp">

                    <TextView
                        android:id="@+id/offsidesTwo_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/advent_pro_medium"
                        android:text="@string/offsides"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/offsidesTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/offsidesTwo_textview"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/advent_pro_medium"
                        android:text="@string/initial_score"
                        android:textSize="15sp" />

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="plusGoalTwo"
                android:text="@string/goal_button"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="plusFoulsTwo"
                android:text="@string/foul_button"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="plusCornersTwo"
                android:text="@string/corner_button"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="plusOffsidesTwo"
                android:text="@string/offside_button"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:onClick="reset"
        android:text="@string/reset_button"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>
</RelativeLayout>

